[gd_scene load_steps=8 format=2]

[ext_resource path="res://Pixel.png" type="Texture" id=1]
[ext_resource path="res://Shield Kid.png" type="Texture" id=2]
[ext_resource path="res://ShieldKid.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.0
height = 48.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.0
height = 48.0

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 0, -56, 24, -48, 32, -24, 16, 0, 48, 16, 40, 16, 16, 8, 24, 56, 16, 56, 8, 32, -8, 32, -16, 56, -24, 56, -16, 8, -40, 16, -48, 16, -16, 0, -32, -24, -24, -48 )

[sub_resource type="CircleShape2D" id=4]
radius = 704.0

[node name="ShieldKid" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )

[node name="Shirt" type="Sprite" parent="Sprite"]
show_behind_parent = true
position = Vector2( -2.44155, -116.357 )
scale = Vector2( 207.58, 688.714 )
texture = ExtResource( 1 )

[node name="h" type="Sprite" parent="Sprite/Shirt"]
show_behind_parent = true
position = Vector2( 0.489664, -0.122422 )
scale = Vector2( 0.557809, 0.738485 )
texture = ExtResource( 1 )

[node name="h2" type="Sprite" parent="Sprite/Shirt"]
show_behind_parent = true
position = Vector2( 0.752871, -0.241508 )
scale = Vector2( 0.557809, 0.401118 )
texture = ExtResource( 1 )

[node name="h3" type="Sprite" parent="Sprite/Shirt"]
show_behind_parent = true
position = Vector2( 0.685554, -0.0793626 )
scale = Vector2( 0.557809, 0.401118 )
texture = ExtResource( 1 )

[node name="h4" type="Sprite" parent="Sprite/Shirt"]
show_behind_parent = true
position = Vector2( 0.819085, -0.20559 )
scale = Vector2( 0.557809, 0.401118 )
texture = ExtResource( 1 )

[node name="h5" type="Sprite" parent="Sprite/Shirt"]
show_behind_parent = true
position = Vector2( -0.443082, -0.138251 )
scale = Vector2( 0.557809, 0.634531 )
texture = ExtResource( 1 )

[node name="h6" type="Sprite" parent="Sprite/Shirt"]
show_behind_parent = true
position = Vector2( -0.66651, -0.152937 )
scale = Vector2( 0.557809, 0.499829 )
texture = ExtResource( 1 )

[node name="h7" type="Sprite" parent="Sprite/Shirt"]
show_behind_parent = true
position = Vector2( -0.826028, -0.155789 )
scale = Vector2( 0.557809, 0.337664 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 3 )

[node name="Area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="TIMER" type="Timer" parent="."]
one_shot = true

[node name="TEMEMEMMr" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
scale = Vector2( 3.2, 5.6 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="TIMER" to="." method="_on_TIMER_timeout"]
[connection signal="timeout" from="TEMEMEMMr" to="." method="_on_TEMEMEMMr_timeout"]
